--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,7 +5,7 @@
   <title>Home Page</title>
 </head>
 <body>
-  <h1>Welcome to Moon Bootz!</h1>
+  <h1>Welcome to Moon Bootz!!</h1>
   <nav>
     <a href="contact.html">Contact</a>
     <a href="product_details.html">Products</a>
