--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -4,7 +4,7 @@
   <title>Product Details</title>
 </head>
 <body>
- <h1>Welcome to Moon Bootz!</h1>
+ <h1>Welcome to Moon Bootz!!</h1>
   <nav>
     <a href="contact.html">Contact</a>
     <a href="product_details.html">Products</a>
