--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+  <div id="center-text">
   <section id="external-links">
     <h1>External Links</h1>
     <ul>
@@ -29,13 +33,16 @@
     </figure>
     <p>The DecProx craze seems to have sprouted up out of nowhere, and is now in full bloom, especially along the coasts.</p>
     <p>"I think it's the flexibility that is really working for people," said Dean Hortenz, the inventor of DecProx and the author of the bestseller <em>The Outdoor Home: Repurposing Fields as Social Spaces</em>. "You don't just have to stand near found decor. You can dine near it, nap near it, and even dance near it. You can't really beat the price point, either."</p>
-    <h1>DIY DecProx Tutorial</h1>
-    <ol>
-      <li>Go out into a field somewhere.</li>
-      <li>Find some flowers.</li>
-      <li>Sit near the flowers.</li>
-      <li>Enjoy.</li>
-    </ol>
-  </main>
+    </main>
+    <div id="Tutorial">
+      <h1>DIY DecProx Tutorial</h1>
+      <ol>
+        <li>Go out into a field somewhere.</li>
+        <li>Find some flowers.</li>
+        <li>Sit near the flowers.</li>
+        <li>Enjoy.</li>
+      </ol>
+    </div>
+  </div>
 </body>
 </html>
