--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -265,6 +265,8 @@
 
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
+
+      <p>I think this GPS I became more confident with CSS positioning, especially in instances where the footer or content below goes werid when other content, such as columns are positioned. I did well with the learning competencies in general, I think this was an interesting challenge.</p>
     </footer>
   <!-- Add your reflection here as a comment. -->
 
