--- a/web_dev/chameleon/index.html
+++ b/web_dev/chameleon/index.html
@@ -15,6 +15,6 @@
     <button>See it blend in!</button>
     <button>Reveal the lizard!</button>
   </div>
-  <script src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
